--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,4 +3,4 @@ repos:
     rev: "v0.16.0"
     hooks:
       - id: terraform-docs-go
-        args: ["markdown", "table", "--recursive", "--output-file", "README.md", "./"]
+        args: ["markdown", "table", "--recursive", "--output-file", "VARIABLES.md", "./"]
